--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -150,7 +150,12 @@
      "output_type": "display_data"
     }
    ]
-     "source": [
+     "source": [ 
+   "# Seperating out emotional categories to see how they correlate with waveform statistics\n",
+    "\n",
+    "df_emotion_dummies = pd.get_dummies(df_2['emotion_label'])\n",
+    "df_emotion_dummies = df_emotion_dummies.join(df_2[['chroma_std', 'contrast', 'energy', 'mfcc_std']])\n",
+    "sns.heatmap(df_emotion_dummies.corr(), cmap=\"seismic\", annot=True, vmin=-1, vmax=1);"
    ]
   },
   {
